# localmind-rag

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  GEMINI.md  README.md  Taskfile.yml  package.json  pnpm-lock.yaml
.claude/: launch.json
.githooks/: pre-commit
.husky/: commit-msg  pre-commit  pre-push
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_runtime.rs  main.rs
apps/desktop/src-tauri/src/local_api/: commands.rs  health.rs  mod.rs  paths.rs  process.rs  state.rs  supervisor.rs
apps/desktop/src-tauri/src/os/: clipboard.rs  dialogs.rs  job_object.rs  mod.rs  windows.rs
backend/: .dockerignore  .gitignore  Directory.Build.props  Directory.Packages.props  KnowledgeApp.slnx
docs/: architecture-diagrams.md  architecture.md  coding-standards.md  database.md  docfx.json  frontend-contracts.md  index.md  local-runtime.md  mvp-architecture-and-walking-skeleton.md  packaging.md  rag-pipeline.md  repository-hygiene.md  setup.md  technology-stack-defense.md  toc.yml
infra/: .dockerignore  docker-compose.remote.yml  docker-compose.yml
runtime/: .gitignore
scripts/: check-colors.ps1  check.ps1  check.sh  coverage.ps1  coverage.sh  dev.ps1  dev.sh  download-models.ps1  download-models.sh  package.ps1  package.sh  setup-ai-models.ps1  setup-ai-runtime.ps1  setup-ai.ps1  setup-ocr.ps1  setup.ps1  setup.sh  test-portable-package.ps1
(+1342 files in other folders)
