[package]
name = "localmind"
version = "0.1.0"
description = "Offline-first local RAG desktop app"
authors = ["localmind"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
