[package]
name = "localmind"
version = "0.1.0"
description = "Offline-first local RAG desktop app"
authors = ["localmind"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "~2.0.0"
tauri-plugin-dialog = "~2.0.0"
uuid = { version = "1.23.2", features = ["v4"] }
